--- a/src/Sesile/MainBundle/Resources/views/Documentation/newAide.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Documentation/newAide.html.twig
@@ -17,10 +17,10 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="file" class="required col-sm-3 control-label" required="required">Document</label>
+                <label for="file" class="required col-sm-3 control-label" >Document</label>
 
                 <div class="col-sm-4 col-xs-10">
-                    <input type="file" id="file" name="file" maxlength="255"/>
+                    <input type="file" id="file" name="file" maxlength="255" required="required"/>
                 </div>
             </div>
             <div class="form-group">
