commit résolution bug 2608

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -70,7 +70,7 @@
                     },
                     {
                         aTargets: [3],
-                        bSortable: false,
+                        bSortable: false
                     },
                     {
                         aTargets: [5],
