--- a/src/Sesile/UserBundle/Resources/views/UserPack/new.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/UserPack/new.html.twig
@@ -10,7 +10,7 @@
             <div class="form-group">
                 <label for="nom" class="col-lg-2 control-label">Nom</label>
                 <div class="col-lg-6">
-                    <input type="text" name="nom" class="form-control required" id="nom">
+                    <input type="text" name="nom" class="form-control required" required="required" id="nom">
                 </div>
             </div>
             <div class="form-group">
