commit résolution bugs 2150 - 2574 - 2576 - 2579 - 2591 - 2620 - 2615 - 2621 - 2622 - 2623 - 2627

--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -80,6 +80,7 @@
         // Pour le bouton de suppression de l etape
         $(document).on('click','#suppetape',function() {
             $(this).parent().remove();
+            scrollFrisque();
             creerFleches();
         });
 
