--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -61,10 +61,10 @@
 <div>
     <br/>
     <input type="submit" name="Mybutton" id="Mybutton" class="btn btn-success" value="Envoyer">
-    <a href="{{ app.request.headers.get('referer') }}"  class="btn btn-primary navbar-btn">
+  <!--  <a href="{{ app.request.headers.get('referer') }}"  class="btn btn-primary navbar-btn">
         <span class="glyphicon glyphicon-share-alt"></span>
         Retour à la page précédente
-    </a>
+    </a>  -->
 </div>
 <script type="text/javascript">
     // jQuery plugin to prevent double submission of forms
