commit résolution après réouverture laura 2576 2591

--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
@@ -186,6 +186,7 @@
         $(document).on('click','#suppetape',function() {
             $(this).parent().remove();
             creerFleches();
+            scrollFrisque();
             aff_button_valider();
         });
 
