--- a/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
@@ -88,7 +88,7 @@
         });
 
         $('.deleter').confirm({
-            text: "Etes-vous sur de vouloir retirer ce classeur?",
+            text: "Etes-vous sur de vouloir supprimer ce type de classeur?",
             confirmButton: "Supprimer",
             cancelButton: "Annuler",
             confirmButtonClass: "btn btn-danger pull-right",
