--- a/src/Sesile/MainBundle/Resources/views/Admin/indexMailing.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Admin/indexMailing.html.twig
@@ -5,7 +5,7 @@
     <div class="bloc_page">
         <div class="titre_page">
             <span class="glyphicon glyphicon-cog"></span>
-            &nbsp;&nbsp;&nbsp;Envoie d'un Emailing
+            &nbsp;&nbsp;&nbsp;Envoi d'un Emailing
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">&nbsp;</div>
@@ -14,7 +14,7 @@
             <div class="col-md-9">
                 <div class="alert-email alert-danger">
                     <span class="glyphicon glyphicon-exclamation-sign"></span>
-                    Ce formulaire envoi un email à <strong>tous</strong> les utilisateurs de l'instance
+                    Ce formulaire envoie un email à <strong>tous</strong> les utilisateurs de l'instance
                 </div>
             </div>
         </div>
