--- a/src/Sesile/MainBundle/Resources/views/Documentation/aide.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Documentation/aide.html.twig
@@ -52,6 +52,13 @@
                 "iDisplayLength": 15,
                 "aLengthMenu": [15, 30, 50, 100],
                 "sDom": 'lft<"footer_datatables"ip>',
+                aoColumnDefs: [
+                    {
+                        aTargets: [2],
+                        bSortable: false,
+                        sClass: "center"
+                    }
+                ],
                 "sPaginationType": "full_numbers"
             });
         </script>
