--- a/src/Sesile/MainBundle/Resources/views/Documentation/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Documentation/index.html.twig
@@ -105,6 +105,13 @@
                 "iDisplayLength": 15,
                 "aLengthMenu": [15, 30, 50, 100],
                 "sDom": 'lft<"footer_datatables"ip>',
+                aoColumnDefs: [
+                    {
+                        aTargets: [3],
+                        bSortable: false,
+                        sClass: "center"
+                    }
+                ],
                 "sPaginationType": "full_numbers"
             });
 
@@ -128,6 +135,13 @@
                 "iDisplayLength": 15,
                 "aLengthMenu": [15, 30, 50, 100],
                 "sDom": 'lft<"footer_datatables"ip>',
+                aoColumnDefs: [
+                    {
+                        aTargets: [2],
+                        bSortable: false,
+                        sClass: "center"
+                    }
+                ],
                 "sPaginationType": "full_numbers"
             });
 
