--- a/src/Sesile/MainBundle/Resources/views/Documentation/patch.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Documentation/patch.html.twig
@@ -54,6 +54,13 @@
                 "iDisplayLength": 15,
                 "aLengthMenu": [15, 30, 50, 100],
                 "sDom": 'lft<"footer_datatables"ip>',
+                aoColumnDefs: [
+                    {
+                        aTargets: [3],
+                        bSortable: false,
+                        sClass: "center"
+                    }
+                ],
                 "sPaginationType": "full_numbers"
             });
         </script>
